# gnn_mesh_simplification

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
gnn_mesh_simplification/: __init__.py
gnn_mesh_simplification/datasets/: __init__.py  tosca.py  watertight.py
gnn_mesh_simplification/models/: __init__.py  edge_predictor.py  face_classifier.py  neural_mesh_simplifier.py
gnn_mesh_simplification/models/layers/: devconv.py  triconv.py
gnn_mesh_simplification/utils/: transforms.py  utils.py
scripts/: main.py
src/gnn_mesh_simplification/datasets/: __init__.py  tosca.py  watertight.py
src/gnn_mesh_simplification/losses/: __init__.py  chamfer_distance_loss.py  edge_crossings_loss.py  overlapping_triangle_loss.py  surface_distance_loss.py  triangle_collision_loss.py
src/gnn_mesh_simplification/models/: __init__.py  edge_predictor.py  face_classifier.py  neural_mesh_simplifier.py  point_sampler.py
src/gnn_mesh_simplification/models/layers/: __init__.py  devconv.py  triconv.py
src/gnn_mesh_simplification/utils/: utils.py
tests/datasets/: test_tosca.py  test_watertight.py
tests/losses/: test_chamfer_distance.py  test_edge_crossings_loss.py  test_surface_distance.py  test_triangle_collision.py
tests/models/: test_edge_predictor.py  test_face_classifier.py  test_mesh_simplifier.py  test_point_sampler.py
