[project]
name = "gnn-mesh-simplification"
version = "0.1.0"
authors = [{name = "Aidan Curtis", email = "aicurtis@pm.me"}]
description = "A mesh simplification module using graph neural networks"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "networkx>=3.4.2",
    "numpy<2",
    "packaging>=26.0",
    "setuptools>=80.10.2",
    "torch-geometric>=2.7.0",
    "trimesh>=4.11.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "pytest",
    "packaging",
    "setuptools",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.pip]
find-links = ["https://data.pyg.org/whl/torch-2.1.0+cpu.html"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
